special aboutmde.org gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,4 @@
-# the composer stuff
+.devtools*
 composer.lock
 vendor/*
-
-# dev
-dev/*
-
-# hack to allow keeping an empty directory
-!.gitkeep
+tmp/*
