--- a/data/page.yml
+++ b/data/page.yml
@@ -1,4 +1,4 @@
-meta_title:         "MDE Reminders"
+meta_title:         "MDE Cheat-Sheet"
 meta_description:   "A cheat-sheet for the Markdown Extended syntax"
 
 # on the basic model: **Markdown** _extended_ (**<strong>MDE</strong>** _<em>dingus</em>_)
